# Laba_5_Sp

./: CMakeLists.txt  lex.yy.c  lexer.l  main.cpp  parser.tab.c  parser.tab.h  parser.y
